feat<controller>:将所有出错时的http请求的http错误码改为400,同时更新了swag注释
