# docs/swagger.json
@@ -59,11 +59,35 @@
                         "description": "Bearer 用户令牌",
                         "name": "Authorization",
                         "in": "header"
+                    },
+                    {
+                        "description": "房屋ID",
+                        "name": "house_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "预约时间",
+                        "name": "time",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "预约失败",
+                        "description": "预约成功",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "预约失败,具体原因查看json中的message字段和code字段",
                         "schema": {
                             "$ref": "#/definitions/controller.ResponseData"
                         }
@@ -120,6 +144,12 @@
                 "responses": {
                     "200": {
                         "description": "登录成功",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "预约失败,具体原因查看json中的message字段和code字段",
                         "schema": {
                             "$ref": "#/definitions/controller.ResponseData"
                         }
@@ -185,7 +215,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "注册失败",
+                        "description": "注册成功",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "预约失败,具体原因查看json中的message字段和code字段",
                         "schema": {
                             "$ref": "#/definitions/controller.ResponseData"
                         }
@@ -212,11 +248,26 @@
                         "description": "Bearer 用户令牌",
                         "name": "Authorization",
                         "in": "header"
+                    },
+                    {
+                        "description": "房屋ID",
+                        "name": "house_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "收藏失败",
+                        "description": "收藏成功",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "预约失败,具体原因查看json中的message字段和code字段",
                         "schema": {
                             "$ref": "#/definitions/controller.ResponseData"
                         }
@@ -248,6 +299,12 @@
                 "responses": {
                     "200": {
                         "description": "获取成功",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "预约失败,具体原因查看json中的message字段和code字段",
                         "schema": {
                             "$ref": "#/definitions/controller.ResponseData"
                         }
@@ -311,6 +368,12 @@
                         "description": "LearnMore页面",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "预约失败,具体原因查看json中的message字段和code字段",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
                         }
                     }
                 }
